--- a/common/pom.xml
+++ b/common/pom.xml
@@ -79,10 +79,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
-            <scope>compile</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.13.2</version>
         </dependency>
         <dependency>
             <groupId>io.github.thatkawaiisam.jedis</groupId>
