--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
+
     <artifactId>spigot</artifactId>
 
     <properties>
@@ -18,6 +19,7 @@
     </properties>
 
     <build>
+        <finalName>ImanityFramework-Spigot</finalName>
         <defaultGoal>clean package</defaultGoal>
         <plugins>
             <plugin>
