--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -88,6 +88,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.derklaro</groupId>
+            <artifactId>requestbuilder</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.protocolsupport</groupId>
             <artifactId>ProtocolSupport</artifactId>
             <version>1.0.0</version>
