--- a/common/pom.xml
+++ b/common/pom.xml
@@ -155,6 +155,12 @@
             <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>reflectasm</artifactId>
+            <version>1.11.9</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
