--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -167,6 +167,12 @@
             <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>reflectasm</artifactId>
+            <version>1.11.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
