--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -89,12 +89,26 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
             <id>dmulloy2-repo</id>
             <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+        </repository>
+        <repository>
+            <id>viaversion-repo</id>
+            <url>https://repo.viaversion.com/</url>
         </repository>
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>spg.lgdev</groupId>
+            <artifactId>spigot-server</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
@@ -114,9 +128,9 @@
             <systemPath>${project.basedir}/libs/ProtocolSupport.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>com.github.MylesIsCool.ViaVersion</groupId>
+            <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -135,12 +149,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>spg.lgdev</groupId>
-            <artifactId>spigot-server</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
