Maven repository deploy

--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>bungee</artifactId>
 
-
+    <distributionManagement>
+        <snapshotRepository>
+            <id>imanity-libraries</id>
+            <url>https://maven.imanity.dev/repository/imanity-libraries/</url>
+        </snapshotRepository>
+        <repository>
+            <id>imanity-libraries</id>
+            <url>https://maven.imanity.dev/repository/imanity-libraries/</url>
+        </repository>
+    </distributionManagement>
 </project>
