Move classes to common module

--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -143,6 +143,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.WesJD.AnvilGUI</groupId>
+            <artifactId>anvilgui</artifactId>
+            <version>master-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>19.0.0</version>
@@ -164,7 +170,7 @@
             <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
             <version>3.2.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
