--- a/common/pom.xml
+++ b/common/pom.xml
@@ -192,6 +192,13 @@
             <version>1.11.9</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.md-5/bungeecord-chat -->
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-chat</artifactId>
+            <version>1.16-R0.3</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
