--- a/independent/pom.xml
+++ b/independent/pom.xml
@@ -139,6 +139,12 @@
             <version>29.0-jre</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.20</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
