--- a/independent/pom.xml
+++ b/independent/pom.xml
@@ -107,7 +107,7 @@
             <groupId>org.imanity.framework</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
