--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>bungee</module>
         <module>independent</module>
+        <module>discord</module>
     </modules>
 
     <distributionManagement>
