--- a/common/pom.xml
+++ b/common/pom.xml
@@ -199,6 +199,12 @@
             <version>1.16-R0.3</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
