--- a/common/pom.xml
+++ b/common/pom.xml
@@ -174,36 +174,53 @@
             <version>8.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Redis framework -->
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.13.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Fast Cache -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>2.8.5</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- ASM -->
         <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>reflectasm</artifactId>
             <version>1.11.9</version>
             <scope>provided</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/net.md-5/bungeecord-chat -->
+
+        <!-- ChatColor Support -->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-chat</artifactId>
             <version>1.16-R0.3</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Class Path Scanner with Reflections -->
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.12</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- Tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
