--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -113,7 +113,7 @@
         </dependency>
         <dependency>
             <groupId>org.imanity.framework</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>core-all</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
