--- a/core/core-repository/pom.xml
+++ b/core/core-repository/pom.xml
@@ -78,19 +78,19 @@
         <dependency>
             <groupId>org.imanity.framework</groupId>
             <artifactId>core-services</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.imanity.framework</groupId>
             <artifactId>core-mongo</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.imanity.framework</groupId>
             <artifactId>core-misc</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
