--- a/bukkit/bukkit-core/pom.xml
+++ b/bukkit/bukkit-core/pom.xml
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>org.imanity.framework</groupId>
             <artifactId>core-all</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
