--- a/core/core-common/pom.xml
+++ b/core/core-common/pom.xml
@@ -19,6 +19,7 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
                 </configuration>
                 <executions>
                     <execution>
@@ -99,6 +100,15 @@
                         <version>1.9.2</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                </configuration>
             </plugin>
         </plugins>
 
@@ -281,7 +291,7 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.6.12</version>
+            <version>${aspectj.version}</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
