--- a/core/core-services/pom.xml
+++ b/core/core-services/pom.xml
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>org.imanity.framework</groupId>
             <artifactId>core-misc</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
