--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,6 +22,10 @@
         <module>core-mysql</module>
     </modules>
 
+    <properties>
+        <aspectj.version>1.8.7</aspectj.version>
+    </properties>
+
     <distributionManagement>
         <snapshotRepository>
             <id>imanity-libraries</id>
