--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>discord</module>
         <module>bukkit</module>
         <module>core</module>
+        <module>http-server</module>
     </modules>
 
     <distributionManagement>
