Finished SQL (H2, MariaDB, MySQL and Postgres)

--- a/core/core-all/pom.xml
+++ b/core/core-all/pom.xml
@@ -35,6 +35,36 @@
                         <configuration>
                             <minimizeJar>false</minimizeJar>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.hibernate</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.hibernate</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.yaml</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.yaml</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.mongodb</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.mongodb</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.bson</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.bson</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.github.ben-manes.caffeine</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.caffeine</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.google.guava</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.guava</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.google.guava</pattern>
+                                    <shadedPattern>org.imanity.framework.libs.guava</shadedPattern>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
