--- a/core/core-repository/pom.xml
+++ b/core/core-repository/pom.xml
@@ -94,6 +94,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.imanity.framework</groupId>
+            <artifactId>core-mysql</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.imanity.framework</groupId>
+            <artifactId>core-yaml</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.0</version>
