--- a/core/core-services/pom.xml
+++ b/core/core-services/pom.xml
@@ -111,6 +111,12 @@
             <version>2.13.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
