Remove useless classes, remember parameter names on compile

--- a/bungee/pom.xml
+++ b/bungee/pom.xml
@@ -38,6 +38,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
                 <executions>
                     <execution>
