--- a/bukkit/bukkit-jar/pom.xml
+++ b/bukkit/bukkit-jar/pom.xml
@@ -43,6 +43,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
                 <executions>
                     <execution>
