--- a/bukkit/impl-imanity/pom.xml
+++ b/bukkit/impl-imanity/pom.xml
@@ -37,6 +37,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
                 <executions>
                     <execution>
