--- a/discord/pom.xml
+++ b/discord/pom.xml
@@ -39,6 +39,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
                 <executions>
                     <execution>
