--- a/independent/pom.xml
+++ b/independent/pom.xml
@@ -38,6 +38,8 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                 </configuration>
                 <executions>
                     <execution>
