--- a/bukkit/impl-imanity/pom.xml
+++ b/bukkit/impl-imanity/pom.xml
@@ -106,8 +106,8 @@
 
         <!-- ImanitySpigot -->
         <dependency>
-            <groupId>spg.lgdev</groupId>
-            <artifactId>spigot-server</artifactId>
+            <groupId>org.imanity.spigot</groupId>
+            <artifactId>spigot</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
