--- a/bukkit/bukkit-common/pom.xml
+++ b/bukkit/bukkit-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>bukkit</artifactId>
         <groupId>org.imanity.framework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -13,6 +13,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <timings.version>0.0.1-SNAPSHOT</timings.version>
     </properties>
 
     <build>
@@ -217,7 +218,7 @@
         <dependency>
             <groupId>org.imanity.framework.timings</groupId>
             <artifactId>core</artifactId>
-            <version>${project.version}</version>
+            <version>${timings.version}</version>
             <scope>compile</scope>
         </dependency>
 
